[project]
name = "study-buddy"
version = "0.1.0"
description = "An AI-powered study assistant for interactive learning from PDFs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.64.0",
    "chromadb>=1.0.15",
    "docling>=2.39.0",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "openai>=1.93.3",
    "platformdirs>=4.3.8",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "pymupdf4llm>=0.0.26",
    "streamlit>=1.47.1",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipython>=9.4.0", "pytest>=8.4.1"]

[tool.isort]
profile = "black"
